--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: cantsaycalc BETA
+title: Battle Facilities Calculator
 ---
 <div class="wrapper">
 	<div>
@@ -14,21 +14,12 @@ title: cantsaycalc BETA
 			<input class="gen btn-input" type="radio" name="gen" value="7" id="gen7" /><label class=" btn btn-small btn-mid" for="gen7">USUM</label>
 
 			<input class="gen btn-input" type="radio" name="gen" value="8" id="gen8" checked="checked" /><label class=" btn btn-small btn-mid" for="gen8">SwSh</label>
-
-			<input class="gen btn-input" type="radio" name="gen" value="21" id="gen21" /><label class="btn btn-small btn-mid" for="gen21">Inverse</label>
-
-			<input class="gen btn-input" type="radio" name="gen" value="20" id="gen20" /><label class="btn btn-small btn-mid" for="gen20">G7BSSF</label>
-
-			<input class="gen btn-input" type="radio" name="gen" value="22" id="gen22" /><label class="btn btn-small btn-right" for="gen22">LGPE</label>
 		</span>
 		<span>What's "<a href="https://www.smogon.com/forums/threads/3604845/">G7BSSF</a>"?</span>
 
 	</div>
 	<hr />
-	<p>BSS calc by <a href="https://twitter.com/jakecantsay">@jakecantsay</a> &amp; <a href="https://www.smogon.com/forums/members/188833/">Lego</a></p>
-	<p>Gen 8 is still very much under development, so there will be a few bugs! Please be patient while we find time to fix these, and let us know of anything that isn't working properly <a href="https://www.smogon.com/forums/threads/3597699/">here</a>.</p>
-	<p>Navigate to Alolan Formes by typing the full name such as <b>Marowak-Alola.</b></p>
-	<p>Something missing? Suggest sets to be permanently added to the calculator <a href="https://www.smogon.com/forums/threads/3597699/">here</a>!</p>
+	<p>Based on the BSS calc by <a href="https://twitter.com/jakecantsay">@jakecantsay</a> &amp; <a href="https://www.smogon.com/forums/members/188833/">Lego</a></p>
 
 	<!-- <div class="banner"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 	<!-- Damage Calc Header -->
@@ -499,8 +490,8 @@ title: cantsaycalc BETA
 		</div>
 		<div class="panel-body">
 			<div class="gen-specific g5 g6 g7 g8 g20 g21 g22" style="width: 3.0em; margin: 0 auto 5px;">
-				<a href="https://www.youtube.com/watch?v=z1gFnq6VNTw">
-					<img id="midimg" align="middle" src="../_images/aegi trozei.png" alt="cant say" height="50" width="50">
+				<a href="https://www.smogon.com/forums/threads/8th-generation-battle-tower-restricted-sparring-discussion-records.3656190/">
+					<img id="midimg" align="middle" src="../_images/tower.png" alt="cant say" height="50" width="50">
 				</a>
 			</div>
 			<div class="gen-specific g3 g4 g5 g6 g7 g8 g20 g21 g22" style="width: 10.6em; margin: 0 auto 5px;" title="Select the battle format.">
