--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@ title: Battle Facilities Calculator
 ---
 <div class="wrapper">
 	<div>
-		<span class="title-text">Battle Spot Singles Damage Calculator - Sword and Shield Edition</span>
+		<span class="title-text">Battle Facilities Damage Calculator - Sword and Shield Edition</span>
 		<span class="generation-select" title="Select the format.">
 			<!-- Gen 5: GBU, Gen 6: ORAS, Gen 7: USUM, Gen 8: SwSh, Gen 20: Gen 7 BSS Factory, Gen 21: Inverse, Gen 22: LGPE -->
-			<input class="gen btn-input" type="radio" name="gen" value="5" id="gen5" /><label class="btn btn-small btn-left" for="gen5">GBU</label>
+			<input class="gen btn-input" type="radio" name="gen" value="5" id="gen5" /><label class="btn btn-small btn-left" for="gen5">BW</label>
 
 			<input class="gen btn-input" type="radio" name="gen" value="6" id="gen6" /><label class="btn btn-small btn-mid" for="gen6">&Omega;R&alpha;S</label>
 
 			<input class="gen btn-input" type="radio" name="gen" value="7" id="gen7" /><label class=" btn btn-small btn-mid" for="gen7">USUM</label>
 
-			<input class="gen btn-input" type="radio" name="gen" value="8" id="gen8" checked="checked" /><label class=" btn btn-small btn-mid" for="gen8">SwSh</label>
+			<input class="gen btn-input" type="radio" name="gen" value="8" id="gen8" checked="checked" /><label class=" btn btn-small btn-right" for="gen8">SwSh</label>
 		</span>
-		<span>What's "<a href="https://www.smogon.com/forums/threads/3604845/">G7BSSF</a>"?</span>
 
 	</div>
 	<hr />
-	<p>Based on the BSS calc by <a href="https://twitter.com/jakecantsay">@jakecantsay</a> &amp; <a href="https://www.smogon.com/forums/members/188833/">Lego</a></p>
+	<p>Based on the BSS calculator by <a href="https://twitter.com/jakecantsay">@jakecantsay</a> &amp; <a href="https://www.smogon.com/forums/members/188833/">Lego</a></p>
 
 	<!-- <div class="banner"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 	<!-- Damage Calc Header -->
