Remove useless buttons

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ title: Battle Facilities Calculator
 					<input class="btn-input calc-trigger" type="checkbox" id="srR" /><label class="btn btn-xwide" for="srR">Stealth Rock</label>
 				</div>
 			</div>
-			<div class="btn-group gen-specific g3 g4 g5 g6 g7 g8 g20 g21 g7 g8 g20 g21">
+			<div class="btn-group gen-specific g3 g4 g5 g6 g7 g20 g21 g7 g20 g21">
 				<div class="left" title="Are there Spikes on this side of the field?">
 					<input class="btn-input calc-trigger" type="radio" name="spikesL" value="0" id="spikesL0" checked="checked" /><label class="btn btn-xsmall btn-left" for="spikesL0">0</label>
 					<input class="btn-input calc-trigger" type="radio" name="spikesL" value="1" id="spikesL1" /><label class="btn btn-xsmall btn-mid" for="spikesL1">1</label>
@@ -607,7 +607,7 @@ title: Battle Facilities Calculator
 					<input class="btn-input calc-trigger" type="checkbox" id="busted16R" /><label class="btn btn-wide" for="busted16R">Busted (1/16th)</label>
 				</div>
 			</div>
-			<div class="btn-group gen-specific g2 g3 g4 g5 g6 g7 g8 g20 g21 g7 g8 g20 g21">
+			<div class="btn-group gen-specific g2 g3 g4 g5 g6 g7 g20 g21 g7 g20 g21">
 				<div class="left" title="Has this Pokemon been revealed with Foresight or Odor Sleuth?">
 					<input class="btn-input calc-trigger" type="checkbox" id="foresightL" /><label class="btn btn-wide" for="foresightL">Foresight</label>
 				</div>
@@ -623,7 +623,7 @@ title: Battle Facilities Calculator
 					<input class="btn-input calc-trigger" type="checkbox" id="minimR" /><label class="btn btn-xwide" for="minimR">Minimize</label>
 				</div>
 			</div>
-			<div class="btn-group gen-specific g6 g7 g8 g20 g21 g22">
+			<div class="btn-group gen-specific g6 g7 g20 g21 g22">
 				<div class="left" title="Is this Pokemon affected by Victory Star?">
 					<input class="btn-input calc-trigger" type="checkbox" id="vicStarL" /><label class="btn btn-xwide" for="vicStarL">Victory Star</label>
 				</div>
