--- a/index.html
+++ b/index.html
@@ -898,6 +898,8 @@ title: Battle Facilities Calculator
 									<option value="-5">-5</option>
 									<option value="-6">-6</option>
 								</select></td>
+							<td><span class="totalMod">---</span>
+                            </td>
 						</tr>
 						<tr>
 							<td></td>
