--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: Battle Facilities Calculator
 ---
 <div class="wrapper">
 	<div>
-		<span class="title-text">Battle Facilities Damage Calculator - Sword and Shield Edition</span>
+		<span class="title-text">Battle Facilities Damage Calculator - Generation 8 Edition</span>
 		<span class="generation-select" title="Select the format.">
-			<!-- Gen 5: GBU, Gen 6: ORAS, Gen 7: USUM, Gen 8: SwSh, Gen 20: Gen 7 BSS Factory, Gen 21: Inverse, Gen 22: LGPE -->
+			<!-- Gen 5: GBU, Gen 6: ORAS, Gen 7: USUM, Gen 8: SwSh, Gen 80: BDSP, Gen 20: Gen 7 BSS Factory, Gen 21: Inverse, Gen 22: LGPE -->
 			<input class="gen btn-input" type="radio" name="gen" value="5" id="gen5" /><label class="btn btn-small btn-left" for="gen5">BW</label>
 
 			<input class="gen btn-input" type="radio" name="gen" value="6" id="gen6" /><label class="btn btn-small btn-mid" for="gen6">&Omega;R&alpha;S</label>
