--- a/honkalculate.html
+++ b/honkalculate.html
@@ -677,12 +677,12 @@ title: Battle Facilities Calculator
         var linkExtension = '.html';
     </script>
     <!-- jquery.dataTables is incompatible with newer versions of jQuery -->
-    <script type="text/javascript" src="./js/vendor/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../_scripts/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script> <!-- to be replaced (probably) -->
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/colvis/1.1.1/js/dataTables.colVis.min.js"></script>
 	<script type="text/javascript" src="../_scripts/select2.min.js"></script>
-    <script type="text/javascript" src="./js/vendor/url-search-params-0.1.2.min.js"></script>
+    <script type="text/javascript" src="../_scripts/url-search-params-0.1.2.min.js"></script>
     <script type="text/javascript">
         this.__createBinding = function(o, m, k, k2) {
             if (k2 === undefined) k2 = k;
