--- a/honkalculate.html
+++ b/honkalculate.html
@@ -716,4 +716,5 @@ title: Battle Facilities Calculator
 	<script type="text/javascript" src="../_scripts/damage.js"></script>
 	<script type="text/javascript" src="../_scripts/ko_chance.js"></script>
 	<script type="text/javascript" src="../_scripts/export.js"></script>
+<script type="text/javascript" src="../_scripts/setdex_custom.js"></script>
     <script type="text/javascript" src="../_scripts/honkalculate_controls.js"></script>
