--- a/honkalculate.html
+++ b/honkalculate.html
@@ -46,12 +46,12 @@ title: Battle Facilities Calculator
             </legend>
             <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-                    <input type="text" class="set-selector" />
+                    <input type="text" class="set-selector calc-trigger" />
                     <div class="info-group top">
                         <div>
                             <label>Type</label>
-                            <select class="type1 terrain-trigger"></select>
-                            <select class="type2 terrain-trigger"></select>
+                            <select class="type1 terrain-trigger calc-trigger"></select>
+                            <select class="type2 terrain-trigger calc-trigger"></select>
                         </div>
                         <div class="hide">
                             <label>Forme</label>
