--- a/honkalculate.html
+++ b/honkalculate.html
@@ -18,10 +18,9 @@ title: Battle Facilities Calculator
 			<input class="gen btn-input" type="radio" name="gen" value="80" id="gen80" /><label class=" btn btn-small btn-right" for="gen80">BDSP</label>
 		</span>
      <span class="modeSelection" aria-labelledby="selectModeInstruction" role="radiogroup" title="Select the calculator's mode of function.">
-            <input class="mode visually-hidden" type="radio" name="mode" id="one-vs-one" /><label class="btn btn-left" for="one-vs-one">One vs One</label>
-            <input class="mode visually-hidden" type="radio" name="mode" id="one-vs-all" /><label class="btn btn-mid" for="one-vs-all">One vs All</label>
-            <input class="mode visually-hidden" type="radio" name="mode" id="all-vs-one" /><label class="btn btn-mid" for="all-vs-one">All vs One</label>
-            <input class="mode visually-hidden" type="radio" name="mode" id="randoms" /><label class="btn btn-right" for="randoms">Random Battles</label>
+            <input class="mode btn-input" type="radio" name="mode" id="one-vs-one" /><label class="btn btn-left" for="one-vs-one">One vs One</label>
+            <input class="mode btn-input" type="radio" name="mode" id="one-vs-all" /><label class="btn btn-mid" for="one-vs-all">One vs All</label>
+            <input class="mode btn-input" type="radio" name="mode" id="all-vs-one" /><label class="btn btn-right" for="all-vs-one">All vs One</label>
         </span>
 
 	</div>
