--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ title: Battle Facilities Calculator
 			<input class="gen btn-input" type="radio" name="gen" value="80" id="gen80" /><label class=" btn btn-small btn-right" for="gen80">BDSP</label>
 		</span>
 		<span class="one-vs-all" role="radiogroup" title="Go to the One Vs. All mode.">
-			<input class="mode btn-input" type="radio" name="mode" value="one-vs-one" id="one-vs-one" checked="checked"/><label class=" btn btn-wide btn-left" for="one-vs-one">One Vs. One</label>
-			<input class="mode btn-input" type="radio" name="mode" value="one-vs-all" id="one-vs-all"/><label class=" btn btn-wide btn-mid" for="one-vs-all">One Vs. All</label>
-			<input class="mode btn-input" type="radio" name="mode" value="all-vs-one" id="all-vs-one"/><label class=" btn btn-wide btn-right" for="all-vs-one">All Vs. One</label>
+			<input class="mode btn-input" type="radio" name="mode" value="one-vs-one" id="one-vs-one" checked="checked"/><label class=" btn btn-left" for="one-vs-one">1v1</label>
+			<input class="mode btn-input" type="radio" name="mode" value="one-vs-all" id="one-vs-all"/><label class=" btn btn-mid" for="one-vs-all">1vAll</label>
+			<input class="mode btn-input" type="radio" name="mode" value="all-vs-one" id="all-vs-one"/><label class=" btn btn-right" for="all-vs-one">Allv1</label>
 		</span>
 
 	</div>
