--- a/honkalculate.html
+++ b/honkalculate.html
@@ -29,10 +29,12 @@ title: Battle Facilities Calculator
     </div>
     <hr />
     <div>
-        <span class="title-text">Tier(s)/Format: </span>
+        <span class="title-text">Sets: </span>
         <span class="tiers" title="Select the tier(s)/format.">
-            <input class="visually-hidden" type="checkbox" name="tier" id="PU" /><label class="btn btn-mid gen-specific g6 g7 g8 g80" for="PU">PU</label>
-            <input class="visually-hidden" type="checkbox" name="tier" id="NU" /><label class="btn btn-mid gen-specific g3 g4 g5 g6 g7 g8" for="NU">NU</label>
+            <input class="visually-hidden" type="checkbox" name="tier" id="All" /><label class="btn btn-mid gen-specific g5 g6 g7 g8 g80" for="All">All sets</label>
+            <input class="visually-hidden" type="checkbox" name="tier" id="40" /><label class="btn btn-mid gen-specific g7" for="40">40+</label>
+	<input class="visually-hidden" type="checkbox" name="tier" id="BT" /><label class="btn btn-mid gen-specific g8" for="BT">Tower</label>
+	<input class="visually-hidden" type="checkbox" name="tier" id="RS" /><label class="btn btn-mid gen-specific g8" for="RS">RS</label>
     </span>
     </div>
 
