--- a/honkalculate.html
+++ b/honkalculate.html
@@ -42,10 +42,9 @@ title: Battle Facilities Calculator
 
     <div class="panel-group" id="accordion">
         <fieldset class="panel panel-default poke-info" id="p1">
-            <legend class="panel-heading panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">>  Pokémon</a>
-            </legend>
-            <div id="collapseOne" class="panel-collapse collapse in">
+		<div class="panel-heading">
+			<h4 class="panel-title">Pokémon</h4>
+		</div>
                 <div class="panel-body">
                     <input type="text" class="set-selector calc-trigger" />
                     <div class="info-group top">
@@ -465,7 +464,6 @@ title: Battle Facilities Calculator
                         </select>
                     </div>
                 </div>
-            </div>
         </fieldset>
         <fieldset class="panel panel-default field-info">
             <legend class="panel-heading panel-title">
