--- a/honkalculate.html
+++ b/honkalculate.html
@@ -31,10 +31,10 @@ title: Battle Facilities Calculator
     <div>
         <span class="title-text">Sets: </span>
         <span class="tiers" title="Select the tier(s)/format.">
-            <input class="visually-hidden" type="checkbox" name="tier" id="All" /><label class="btn btn-mid gen-specific g5 g6 g7 g8 g80" for="All">All sets</label>
-            <input class="visually-hidden" type="checkbox" name="tier" id="40" /><label class="btn btn-mid gen-specific g7" for="40">40+</label>
-	<input class="visually-hidden" type="checkbox" name="tier" id="BT" /><label class="btn btn-mid gen-specific g8" for="BT">Tower</label>
-	<input class="visually-hidden" type="checkbox" name="tier" id="RS" /><label class="btn btn-mid gen-specific g8" for="RS">RS</label>
+            <input class="btn-input" type="checkbox" name="tier" id="All" /><label class="btn btn-mid gen-specific g5 g6 g7 g8 g80" for="All">All sets</label>
+            <input class="btn-input" type="checkbox" name="tier" id="40" /><label class="btn btn-mid gen-specific g7" for="40">40+</label>
+	<input class="btn-input" type="checkbox" name="tier" id="BT" /><label class="btn btn-mid gen-specific g8" for="BT">Tower</label>
+	<input class="btn-input" type="checkbox" name="tier" id="RS" /><label class="btn btn-mid gen-specific g8" for="RS">RS</label>
     </span>
     </div>
 
@@ -395,9 +395,9 @@ title: Battle Facilities Calculator
                             <option value="Physical">Physical</option>
                             <option value="Special">Special</option>
                         </select>
-                        <input class="move-crit calc-trigger visually-hidden" type="checkbox" id="critL1" />
+                        <input class="move-crit calc-trigger btn-input" type="checkbox" id="critL1" />
                         <label class="btn crit-btn" for="critL1" title="Force this attack to be a critical hit?">Crit</label>
-                        <input class="move-z calc-trigger visually-hidden" type="checkbox" id="zL1"/>
+                        <input class="move-z calc-trigger btn-input" type="checkbox" id="zL1"/>
                         <label class="btn z-btn gen-specific g7" for="zL1" title="Use the corresponding Z-move?">Z</label>
                         <select class="move-hits hide">
                             <option value="2">2 hits</option>
@@ -414,9 +414,9 @@ title: Battle Facilities Calculator
                             <option value="Physical">Physical</option>
                             <option value="Special">Special</option>
                         </select>
-                        <input class="move-crit calc-trigger  visually-hidden" type="checkbox" id="critL2" />
+                        <input class="move-crit calc-trigger btn-input" type="checkbox" id="critL2" />
                         <label class="btn crit-btn" for="critL2" title="Force this attack to be a critical hit?">Crit</label>
-                        <input class="move-z visually-hidden" type="checkbox" id="zL2"/>
+                        <input class="move-z calc-trigger btn-input" type="checkbox" id="zL2"/>
                         <label class="btn z-btn gen-specific g7" for="zL2" title="Make this attack a Z-move?">Z</label>
                         <select class="move-hits hide">
                             <option value="2">2 hits</option>
@@ -433,9 +433,9 @@ title: Battle Facilities Calculator
                             <option value="Physical">Physical</option>
                             <option value="Special">Special</option>
                         </select>
-                        <input class="move-crit visually-hidden" type="checkbox" id="critL3" />
+                        <input class="move-crit calc-trigger btn-input" type="checkbox" id="critL3" />
                         <label class="btn crit-btn" for="critL3" title="Force this attack to be a critical hit?">Crit</label>
-                        <input class="move-z visually-hidden" type="checkbox" id="zL3"/>
+                        <input class="move-z calc-trigger btn-input" type="checkbox" id="zL3"/>
                         <label class="btn z-btn gen-specific g7" for="zL3" title="Make this attack a Z-move?">Z</label>
                         <select class="move-hits hide">
                             <option value="2">2 hits</option>
@@ -445,16 +445,16 @@ title: Battle Facilities Calculator
                         </select>
                     </div>
                     <div class="move4">
-                        <select class="move-selector calc-trigger  small-select"></select>
-                        <input class="move-bp calc-trigger " value="0" />
-                        <select class="move-type calc-trigger "></select>
-                        <select class="move-cat calc-trigger  gen-specific g4 g5 g6 g7 g8 g80">
+                        <select class="move-selector calc-trigger small-select"></select>
+                        <input class="move-bp calc-trigger" value="0" />
+                        <select class="move-type calc-trigger"></select>
+                        <select class="move-cat calc-trigger gen-specific g4 g5 g6 g7 g8 g80">
                             <option value="Physical">Physical</option>
                             <option value="Special">Special</option>
                         </select>
-                        <input class="move-crit calc-trigger visually-hidden" type="checkbox" id="critL4" />
+                        <input class="move-crit calc-trigger calc-trigger btn-input" type="checkbox" id="critL4" />
                         <label class="btn crit-btn" for="critL4" title="Force this attack to be a critical hit?">Crit</label>
-                        <input class="move-z visually-hidden" type="checkbox" id="zL4"/>
+                        <input class="move-z calc-trigger btn-input" type="checkbox" id="zL4"/>
                         <label class="btn z-btn gen-specific g7" for="zL4" title="Make this attack a Z-move?">Z</label>
                         <select class="move-hits hide">
                             <option value="2">2 hits</option>
