--- a/honkalculate.html
+++ b/honkalculate.html
@@ -389,7 +389,7 @@ title: Battle Facilities Calculator
                     </div>
                     <div class="move1">
                         <select class="move-selector calc-trigger small-select"></select>
-                        <input class="move-bp" value="50" />
+                        <input class="move-bp calc-trigger" value="50" />
                         <select class="move-type calc-trigger"></select>
                         <select class="move-cat calc-trigger gen-specific g4 g5 g6 g7 g8 g80">
                             <option value="Physical">Physical</option>
@@ -399,7 +399,7 @@ title: Battle Facilities Calculator
                         <label class="btn crit-btn" for="critL1" title="Force this attack to be a critical hit?">Crit</label>
                         <input class="move-z calc-trigger btn-input" type="checkbox" id="zL1"/>
                         <label class="btn z-btn gen-specific g7" for="zL1" title="Use the corresponding Z-move?">Z</label>
-                        <select class="move-hits hide">
+                        <select class="move-hits calc-trigger hide">
                             <option value="2">2 hits</option>
                             <option value="3">3 hits</option>
                             <option value="4">4 hits</option>
@@ -407,10 +407,10 @@ title: Battle Facilities Calculator
                         </select>
                     </div>
                     <div class="move2">
-                        <select class="move-selector calc-trigger  small-select"></select>
-                        <input class="move-bp calc-trigger " value="0" />
-                        <select class="move-type calc-trigger "></select>
-                        <select class="move-cat gen-specific g4 g5 g6 g7 g8 g80">
+                        <select class="move-selector calc-trigger small-select"></select>
+                        <input class="move-bp calc-trigger" value="0" />
+                        <select class="move-type calc-trigger"></select>
+                        <select class="move-cat calc-trigger gen-specific g4 g5 g6 g7 g8 g80">
                             <option value="Physical">Physical</option>
                             <option value="Special">Special</option>
                         </select>
@@ -418,7 +418,7 @@ title: Battle Facilities Calculator
                         <label class="btn crit-btn" for="critL2" title="Force this attack to be a critical hit?">Crit</label>
                         <input class="move-z calc-trigger btn-input" type="checkbox" id="zL2"/>
                         <label class="btn z-btn gen-specific g7" for="zL2" title="Make this attack a Z-move?">Z</label>
-                        <select class="move-hits hide">
+                        <select class="move-hits calc-trigger hide">
                             <option value="2">2 hits</option>
                             <option value="3">3 hits</option>
                             <option value="4">4 hits</option>
@@ -479,9 +479,9 @@ title: Battle Facilities Calculator
 					</select>
 				</div>
                     <div class="gen-specific g3 g4 g5 g6 g7 g8 g80" style="width: 10.6em; margin: 0 auto 5px;" title="Select the battle format.">
-                        <input class="visually-hidden" type="radio" name="format" value="Singles" id="singles-format" />
+                        <input class="btn-input calc-trigger" type="radio" name="format" value="Singles" id="singles-format" />
                         <label class="btn btn-left" for="singles-format">Singles</label>
-                        <input class="visually-hidden" type="radio" name="format" value="Doubles" id="doubles-format" checked="checked" />
+                        <input class="btn-input calc-trigger" type="radio" name="format" value="Doubles" id="doubles-format" checked="checked" />
                         <label class="btn btn-right" for="doubles-format">Doubles</label>
                     </div>
 			<div class="gen-specific g6 g7 g8 g80 g20 g21" style="width: 22.0em; margin: 5px auto;" title="Select the current terrain.">
@@ -529,87 +529,87 @@ title: Battle Facilities Calculator
 			</div>
                     <div class="btn-group gen-specific g4 g5 g6 g7 g8 g80">
                         <div class="left" title="Is Stealth Rock affecting this side of the field?">
-                            <input class="visually-hidden" type="checkbox" id="srL" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="srL" />
                             <label class="btn btn-xwide" for="srL">Stealth Rock</label>
                         </div>
                         <div class="right" title="Is Stealth Rock affecting this side of the field?">
-                            <input class="visually-hidden" type="checkbox" id="srR" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="srR" />
                             <label class="btn btn-xwide" for="srR">Stealth Rock</label>
                         </div>
                     </div>
                     <div class="btn-group gen-specific g3 g4 g5 g6 g7 g8 g80">
                         <div class="left" title="Are there Spikes on this side of the field?">
-                            <input class="visually-hidden" type="radio" name="spikesL" value="0" id="spikesL0" checked="checked" />
+                            <input class="btn-input calc-trigger" type="radio" name="spikesL" value="0" id="spikesL0" checked="checked" />
                             <label class="btn btn-xsmall btn-left" for="spikesL0">0</label>
-                            <input class="visually-hidden" type="radio" name="spikesL" value="1" id="spikesL1" />
+                            <input class="btn-input calc-trigger" type="radio" name="spikesL" value="1" id="spikesL1" />
                             <label class="btn btn-xsmall btn-mid" for="spikesL1">1</label>
-                            <input class="visually-hidden" type="radio" name="spikesL" value="2" id="spikesL2" />
+                            <input class="btn-input calc-trigger" type="radio" name="spikesL" value="2" id="spikesL2" />
                             <label class="btn btn-xsmall btn-mid" for="spikesL2">2</label>
-                            <input class="visually-hidden" type="radio" name="spikesL" value="3" id="spikesL3" />
+                            <input class="btn-input calc-trigger" type="radio" name="spikesL" value="3" id="spikesL3" />
                             <label class="btn btn-wide btn-right" for="spikesL3">3 Spikes</label>
                         </div>
                         <div class="right" title="Are there Spikes on this side of the field?">
-                            <input class="visually-hidden" type="radio" name="spikesR" value="3" id="spikesR3" />
+                            <input class="btn-input calc-trigger" type="radio" name="spikesR" value="3" id="spikesR3" />
                             <label class="btn btn-wide btn-left" for="spikesR3">3 Spikes</label>
-                            <input class="visually-hidden" type="radio" name="spikesR" value="2" id="spikesR2" />
+                            <input class="btn-input calc-trigger" type="radio" name="spikesR" value="2" id="spikesR2" />
                             <label class="btn btn-xsmall btn-mid" for="spikesR2">2</label>
-                            <input class="visually-hidden" type="radio" name="spikesR" value="1" id="spikesR1" />
+                            <input class="btn-input calc-trigger" type="radio" name="spikesR" value="1" id="spikesR1" />
                             <label class="btn btn-xsmall btn-mid" for="spikesR1">1</label>
-                            <input class="visually-hidden" type="radio" name="spikesR" value="0" id="spikesR0" checked="checked" />
+                            <input class="btn-input calc-trigger" type="radio" name="spikesR" value="0" id="spikesR0" checked="checked" />
                             <label class="btn btn-xsmall btn-right" for="spikesR0">0</label>
                         </div>
                     </div>
                     <div class="btn-group gen-specific g2">
                         <div class="left" title="Are there Spikes on this side of the field?">
-                            <input class="visually-hidden" type="checkbox" id="gscSpikesL" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="gscSpikesL" />
                             <label class="btn" for="gscSpikesL">Spikes</label>
                         </div>
                         <div class="right" title="Are there Spikes on this side of the field?">
-                            <input class="visually-hidden" type="checkbox" id="gscSpikesR" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="gscSpikesR" />
                             <label class="btn" for="gscSpikesR">Spikes</label>
                         </div>
                     </div>
                     <div class="btn-group">
                         <div class="left" title="Is this Pok&eacute;mon protected by Reflect and/or Light Screen?">
-                            <input class="visually-hidden" type="checkbox" id="reflectL" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="reflectL" />
                             <label class="btn btn-left" for="reflectL">Reflect</label>
-                            <input class="visually-hidden" type="checkbox" id="lightScreenL" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="lightScreenL" />
                             <label class="btn btn-xwide btn-right" for="lightScreenL">Light Screen</label>
                         </div>
                         <div class="right" title="Is this Pok&eacute;mon protected by Reflect and/or Light Screen?">
-                            <input class="visually-hidden" type="checkbox" id="lightScreenR" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="lightScreenR" />
                             <label class="btn btn-xwide btn-left" for="lightScreenR">Light Screen</label>
-                            <input class="visually-hidden" type="checkbox" id="reflectR" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="reflectR" />
                             <label class="btn btn-right" for="reflectR">Reflect</label>
                         </div>
                     </div>
                     <div class="btn-group">
                         <div class="left" title="Has this Pok&eacute;mon been affected by Leech Seed?">
-                            <input class="visually-hidden" type="checkbox" id="leechSeedL" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="leechSeedL" />
                             <label class="btn btn-wide" for="leechSeedL">Leech Seed</label>
                         </div>
                         <div class="right" title="Has this Pok&eacute;mon been affected by Leech Seed?">
-                            <input class="visually-hidden" type="checkbox" id="leechSeedR" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="leechSeedR" />
                             <label class="btn btn-wide" for="leechSeedR">Leech Seed</label>
                         </div>
                     </div>
                     <div class="btn-group gen-specific g2 g3 g4 g5 g6 g7">
                         <div class="left" title="Has this Pok&eacute;mon been revealed with Foresight or Odor Sleuth?">
-                            <input class="visually-hidden" type="checkbox" id="foresightL" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="foresightL" />
                             <label class="btn btn-wide" for="foresightL">Foresight</label>
                         </div>
                         <div class="right" title="Has this Pok&eacute;mon been revealed with Foresight or Odor Sleuth?">
-                            <input class="visually-hidden" type="checkbox" id="foresightR" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="foresightR" />
                             <label class="btn btn-wide" for="foresightR">Foresight</label>
                         </div>
                     </div>
                     <div class="btn-group gen-specific g3 g4 g5 g6 g7 g8 g80">
                         <div class="left" title="Has this Pok&eacute;mon's power been boosted by an ally's Helping Hand?">
-                            <input class="visually-hidden" type="checkbox" id="helpingHandL" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="helpingHandL" />
                             <label class="btn btn-xxwide" for="helpingHandL">Helping Hand</label>
                         </div>
                         <div class="right" title="Has this Pok&eacute;mon's power been boosted by an ally's Helping Hand?">
-                            <input class="visually-hidden" type="checkbox" id="helpingHandR" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="helpingHandR" />
                             <label class="btn btn-xxwide" for="helpingHandR">Helping Hand</label>
                         </div>
                     </div>
@@ -623,21 +623,21 @@ title: Battle Facilities Calculator
 			</div>
                     <div class="btn-group gen-specific g5 g6 g7 g8 g80">
                         <div class="left" title="Is the Pok&eacute;mon protected by an ally's Friend Guard?">
-                            <input class="visually-hidden" type="checkbox" id="friendGuardL" />
+                            <input class="btn-input" type="checkbox" id="friendGuardL" />
                             <label class="btn btn-xxwide" for="friendGuardL">Friend Guard</label>
                         </div>
                         <div class="right" title="Is the Pok&eacute;mon protected by an ally's Friend Guard?">
-                            <input class="visually-hidden" type="checkbox" id="friendGuardR" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="friendGuardR" />
                             <label class="btn btn-xxwide" for="friendGuardR">Friend Guard</label>
                         </div>
                     </div>
                     <div class="btn-group gen-specific g7 g8">
                         <div class="left" title="Has this Pok&eacute;mon's power been boosted by an ally's Battery ability?">
-                            <input class="visually-hidden" type="checkbox" id="batteryL" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="batteryL" />
                             <label class="btn btn-xxwide" for="batteryL">Battery</label>
                         </div>
                         <div class="right" title="Has this Pok&eacute;mon's power been boosted by an ally's Battery ability?">
-                            <input class="visually-hidden" type="checkbox" id="batteryR" />
+                            <input class="btn-input calc-trigger" type="checkbox" id="batteryR" />
                             <label class="btn btn-xxwide" for="batteryR">Battery</label>
                         </div>
                    <div class="btn-group gen-specific g8">
