--- a/honkalculate.html
+++ b/honkalculate.html
@@ -47,7 +47,7 @@ title: Battle Facilities Calculator
 		</div>
                 <div class="panel-body">
                     <input type="text" class="set-selector calc-trigger" />
-                    <div class="info-group top">
+                    <div class="info-group">
                         <div>
                             <label>Type</label>
                             <select class="type1 terrain-trigger calc-trigger"></select>
@@ -82,16 +82,16 @@ title: Battle Facilities Calculator
                                     <label>HP</label>
                                 </td>
                                 <td>
-                                    <input class="base" value="100" />
+                                    <input class="base calc-trigger" value="100" />
                                 </td>
                                 <td class="gen-specific g3 g4 g5 g6 g7 g8 g80">
-                                    <input class="ivs" value="31" />
+                                    <input class="ivs calc-trigger" value="31" />
                                 </td>
                                 <td class="gen-specific g3 g4 g5 g6 g7 g8 g80">
-                                    <input class="evs" type="number" min="0" max="252" step="4" value="0" />
+                                    <input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" />
                                 </td>
                                 <td class="gen-specific g1 g2 hide">
-                                    <input class="dvs" value="15" disabled="disabled" />
+                                    <input class="dvs calc-trigger" value="15" disabled="disabled" />
                                 </td>
                                 <td><span class="total">341</span>
                                 </td>
@@ -102,16 +102,16 @@ title: Battle Facilities Calculator
                                     <label>Attack</label>
                                 </td>
                                 <td>
-                                    <input class="base" value="100" />
+                                    <input class="base calc-trigger" value="100" />
                                 </td>
                                 <td class="gen-specific g3 g4 g5 g6 g7 g8 g80">
-                                    <input class="ivs" value="31" />
+                                    <input class="ivs calc-trigger" value="31" />
                                 </td>
                                 <td class="gen-specific g3 g4 g5 g6 g7 g8 g80">
-                                    <input class="evs" type="number" min="0" max="252" step="4" value="0" />
+                                    <input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" />
                                 </td>
                                 <td class="gen-specific g1 g2 hide">
-                                    <input class="dvs" value="15" />
+                                    <input class="dvs calc-trigger" value="15" />
                                 </td>
                                 <td><span class="total">236</span>
                                 </td>
