--- a/honkalculate.html
+++ b/honkalculate.html
@@ -38,9 +38,7 @@ title: Battle Facilities Calculator
     </span>
     </div>
 
-</div>
-
-    <div class="panel-group poke-info" id="p1">
+    <div class="panel-group panel poke-info" id="p1">
 		<div class="panel-heading">
 			<h4 class="panel-title">Pokémon</h4>
 		</div>
@@ -659,7 +657,8 @@ title: Battle Facilities Calculator
                 </thead>
             </table>
         </fieldset>
-    </div>
+	    </div>
+</div>
     <script type="text/javascript">
         var linkExtension = '.html';
     </script>
