--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ title: Battle Facilities Calculator
 
 			<input class="gen btn-input" type="radio" name="gen" value="7" id="gen7" /><label class=" btn btn-small btn-mid" for="gen7">USUM</label>
 
-			<input class="gen btn-input" type="radio" name="gen" value="8" id="gen8" checked="checked" /><label class=" btn btn-small btn-mid" for="gen8">SwSh</label>
+			<input class="gen btn-input" type="radio" name="gen" value="8" id="gen8" /><label class=" btn btn-small btn-mid" for="gen8">SwSh</label>
 			
-			<input class="gen btn-input" type="radio" name="gen" value="80" id="gen80" /><label class=" btn btn-small btn-right" for="gen80">BDSP</label>
+			<input class="gen btn-input" type="radio" name="gen" value="80" id="gen80" checked="checked" /><label class=" btn btn-small btn-right" for="gen80">BDSP</label>
 		</span>
 
 	</div>
